--- a/wiki/BindingFunctions.wiki
+++ b/wiki/BindingFunctions.wiki
@@ -235,15 +235,26 @@ This framework can also bind JS member properties to static or member variables.
 As an example, assume we are creating a new JS class in C++. Assume the JS class is bound to the native class `MyNativeType`, and `JSToNative<MyNativeType>` has been specialized specialized so that `CastFromJS<MyNativeType>()` will work as expected. To bind a static variable as a member property to JS the objects:
 
 {{{
-v8::Handle<v8::ObjectTemplate> proto = ...;
-typedef v8::juice::convert::PropertyBinder<MyNativeType> PB;
-static int sharedInt = 42;
-static double sharedDouble = 42.42;
-PB::BindStaticVar<int,&sharedInt>( "sharedInteger", proto );
-PB::BindStaticVar<double,&sharedDouble>( "sharedDouble", proto );
-}}}
+// Static members we want to bind:
+int MyNativeType::sharedInt = 42;
+double MyNativeType::sharedDouble = 42.42;
 
-The syntax for binding to static member variables is the same, but the var name must be prefixed with the containing class name. e.g. `&MyNativeType::sharedInteger`.
+// Prototype object to bind them to:
+v8::Handle<v8::ObjectTemplate> proto = ...;
+
+// Convenience typedef:
+typedef v8::juice::convert::PropertyBinder<MyNativeType> PB;
+
+// Bind the members to JS:
+PB::BindStaticVar<int,&sharedInt,&MyNativeType::sharedInt>( "sharedInteger", proto );
+PB::BindStaticVar<double,&sharedDouble,&MyNativeType::sharedDouble>( "sharedDouble", proto );
+
+// Or bind to non-member statics:
+static int anInt = 42;
+static double aDouble = 42.42;
+PB::BindStaticVar<int,&anInt>( "anInt", proto );
+PB::BindStaticVar<double,&aDouble>( "aDouble", proto );
+}}}
 
 Now the following JS code will access the native integer shown above:
 
