--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -3,13 +3,16 @@
 
 =v8-juice ChangeLog=
 
-This is the informal ChangeLog for the v8-juice project. Newest items
+This is the informal ChangeLog and "news list" for the v8-juice project. Newest items
 are at the top. Dates written extra large are release dates. This contains only a high-level list of changes. The exact list of changes can be fished out of our source code repository at:
 
   * http://code.google.com/p/v8-juice/source/browse
   * http://code.google.com/p/v8-juice/source/list
 
 ----
+
+*2010 Dec 29*
+  * Joel Reymont has made v8-juice available [https://github.com/wagerlabs/v8-juice via github].
 
 ==2010 November 26==
   * Happy birthday to my brother Gerald!
