--- a/wiki/PluginReadline.wiki
+++ b/wiki/PluginReadline.wiki
@@ -36,9 +36,10 @@ print("Done!");
 // history will be auto-saved at shutdown
 }}}
 
-That demonstrates all of the functions except for `clearHistory()`, which clears the history list.
+That demonstrates all of the functions except for `clearHistory()`, which clears the history list, and `saveHistory()`, which saves the history. If `saveHistory()` is passed no filename then it uses the name which was passed to `loadHistory()`.
 
 Points of note:
 
   * An application only has only one input terminal and therefore only one shared instance of readline.
   * If loadHistory() is ever called then the history will be saved automatically at shutdown. If saveHistory() is ever called, the name set there will be used for auto-save.
+  * ACHTUNG: auto-save is not reliable because v8 does not guaranty that destructors are ever called. Thus one should use `saveHistory()` to explicitly save the history, either periodically (e.g. after reading each line) or after exiting the read loop. A try/catch block around the read loop is recommended so that history can be saved in the face of an exception.
