Edited wiki page ChangeLog through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -12,7 +12,7 @@ are at the top. Dates written extra large are release dates. This contains only 
 ----
 
 *2011 Jan 6*
-  * Added `v8::juice::GetV8StackTrace()`, which implements the `v8::InvocationCallback` interface and allows us to fetch stacktraces from our JS code.
+  * Added `v8::juice::GetV8StackTrace()`, which implements the `v8::InvocationCallback` interface and allows us to fetch stacktraces from our JS code. It is available in the `v8-juice-shell` (or via the `JuiceShell` class) with the JS name `getStackTrace()`.
 
 *2010 Dec 29*
   * Joel Reymont has made v8-juice available [https://github.com/wagerlabs/v8-juice via github].
