--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -6,10 +6,13 @@
 This is the informal ChangeLog and "news list" for the v8-juice project. Newest items
 are at the top. Dates written extra large are release dates. This contains only a high-level list of changes. The exact list of changes can be fished out of our source code repository at:
 
-  * http://code.google.com/p/v8-juice/source/browse
-  * http://code.google.com/p/v8-juice/source/list
+  * [http://code.google.com/p/v8-juice/source/browse]
+  * [http://code.google.com/p/v8-juice/source/list]
 
 ----
+
+*2011 Jan 23*
+  * Added the [V8Convert v8::convert] sub-project.
 
 *2011 Jan 22*
   * Inspired by the grace of vu8's API, i've started work on a spin-off of v8-juice called v8-convert. It currently contains only the [ConvertingTypes core type conversion] and a function-binding API similar to [BindingFunctions the current function-binding code], but using function-ptr-style template args to make it more human-readable. Unlike v8-juice, it is a header-only implementation, with the intention that it be easy to drop in to arbitrary v8 clients. i will add a basic class-binding mechanism, but nothing so heavyweight/complex as that provided by v8-juice. The initial code is working well, and once i've added a few missing features and documented it, i will release it as a standalone sub-project of v8-juice.
