Edited wiki page V8Convert through web user interface.

--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -76,7 +76,7 @@ cb = cv::MethodToInvocationCallback<
        &MyType::multiply
      >;
 
-// Const class method: char const * MyType::multiply(int)
+// Const class method: char const * MyType::errorCodeToString(int)
 cb = cv::ConstMethodToInvocationCallback<
        MyType,
        char const * (int),
