--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -11,10 +11,11 @@ The `v8::convert` API is a spin-off of the core-most components of the v8-juice 
 
   * Converting between v8 Value handles and "native types" using a generic interface. This allows us to write generic algorithms which convert between JS/C++ without having to know the exact types we're dealing with.  The basic POD types and some STL types are supported out of the box and plugging in one's own types is normally quite simple.
   * Converting free- and member functions into `v8::InvocationCallback` functions. These generated functions convert the !JavaScript-originated function arguments into native counterparts, forward the data to the original native function, and convert the return values back to something JS can use. (The `void` return type is translated to the `undefined` JS value.)
+  * Binding JS object properties to native shared or member properties or accessor/mutator functions/methods.
 
-Those two core features give us all we need in order to be able to bind near-arbitrary C/C++ functions with !JavaScript, insofar as cross-language calling conventions and type conversions allow us to do so.
+The first two core features give us all we need in order to be able to bind near-arbitrary C/C++ functions with !JavaScript, insofar as cross-language calling conventions and type conversions allow us to do so. The last feature is really just "sugar" (but also quite convenient at times).
 
-For cases where the "automatic" function-to-!InvocationCallback conversions are not possible or not suitable, the type-conversion API can simplify the implementation of custom `v8::InvocationCallback` functions.
+For cases where the "automatic" function-to-!InvocationCallback conversions are not possible or not suitable, the type-conversion API can still simplify the implementation of custom `v8::InvocationCallback` functions.
 
 All of the conversions are compile-time typesafe where possible and fail gracefully (e.g. using a JS-side exception as opposed to an immediate crash) when such a determination can only be made at runtime.
 
@@ -29,7 +30,7 @@ My many thanks to James Pike, author of [https://github.com/tsa/vu8 vu8], for hi
   * `JSToNative<T>`: template to convert JS values to `T` (almost always `T*` for non-POD types).
   * `NativeToJS<T>`: template to convert `T` objects to JS counterparts. Adding this support for client-side types requires adding tooling which maps the native object to a JS instance.
 
-These work identically to the v8-juice APIs with the same names (see [ConvertingTypes]), the only client-visible difference being that the classes (and thus client-defined specializations) are defined in a different namespace than in v8-juice.
+These work identically to the v8-juice APIs with the same names (see [ConvertingTypes]), the only client-visible difference being that the classes (and thus client-defined specializations) are defined in a different namespace than in v8-juice. Future (post-2010) development in the type conversions API will happen in this copy instead of the `v8::juice` copy.
 
 =Converting Types=
 
@@ -37,6 +38,19 @@ These work identically to the v8-juice APIs with the same names (see [Converting
   * `CastFromJS<T>()`: converts a v8 value to a `T` (or `T*` for most non-POD types).
 
 These are very thin wrappers around `NativeToJS<>` and `JSToNative<>`, and work identically to the v8-juice APIs with the same names (see [ConvertingTypes]). A few special-case overloads also exist to avoid call ambiguities in some cases or to cover special cases (most notably those taking (`char *`) and `v8::InvocationCallback` arguments).
+
+Here's a silly trick you can do with `CastToJS()`:
+
+{{{
+Handle<Value> myInvocationCallback( v8::Arguments const & )
+    try {
+     ....
+    }
+    catch( std::exception const & ex ) {
+       return cv::CastToJS(ex); // triggers a JS-side exception
+    }
+}
+}}}
 
 =Converting Functions to `v8::InvocationCallback`=
 
